--- a/from_mwt_ds/DataScience/datagen.ipynb
+++ b/from_mwt_ds/DataScience/datagen.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
     "                \"_labelIndex\": int(row['chosen']),\n",
     "                \"a\": [row['chosen'] + 1, (row['chosen'] + 1) % 2 + 1],\n",
     "                \"c\": {'shared': {'f': str(row['shared_good'])},\n",
-    "                    '_multi': [{'a': {'f': str(row['a1_good']), 'constant': 1}},\n",
+    "                    '_multi': [{'a': {'f': str(row['a1_good'])}},\n",
     "                        {'a': {'f': str(row['a2_good'])}}]},\n",
     "                \"p\": [row['prob'], 1 - row['prob']] \n",
     "            }\n",
@@ -169,8 +169,8 @@
     "                    if 'b' not in o['c']['_multi'][0]: \n",
     "                        o['c']['_multi'][0]['b'] = {}\n",
     "                        o['c']['_multi'][1]['b'] = {}   \n",
-    "                    o['c']['_multi'][0]['b'][f'a1_bad_{i}'] = row[f'a1_bad_{i}']\n",
-    "                    o['c']['_multi'][1]['b'][f'a2_bad_{i}'] = row[f'a2_bad_{i}']\n",
+    "                    o['c']['_multi'][0]['b'][f'a_bad_{i}'] = row[f'a1_bad_{i}']\n",
+    "                    o['c']['_multi'][1]['b'][f'a_bad_{i}'] = row[f'a2_bad_{i}']\n",
     "                    i += 1\n",
     "                else:\n",
     "                    break\n",
@@ -184,12 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "simulation = Simulation(1000, 500, 0.1, 2)\n",
     "simulation.to_dsjson_file('file.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.loads(next(open('file.json')))"
    ]
   },
   {
@@ -205,7 +214,8 @@
    "hash": "e6d91e144c1e8b75ccdd4259c6213e15c7f5d1d664ef01abea10605a34f365c2"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -219,9 +229,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
