--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Helpers"
+    "# Hacks & helpers"
    ]
   },
   {
@@ -23,51 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vw_executor.vw_opts import VwOpts\n",
+    "from vw_executor.vw_opts import VwOpts, InteractiveGrid\n",
     "from pathlib import Path\n",
-    "\n",
-    "class SimulationBase:\n",
-    "    def __init__(self, folder, **kwargs):\n",
-    "        for k, v in kwargs.items():\n",
-    "            self.__setattr__(k, v)\n",
-    "        self._path = Path(folder).joinpath(f'sim-{VwOpts(kwargs)}'.replace(' ', '-'))\n",
-    "        if not self._path.exists():\n",
-    "            Path(folder).mkdir(parents=True, exist_ok=True)\n",
-    "            self._examples = self.generate()\n",
-    "            self.save()\n",
-    "        else:\n",
-    "            self.load()\n",
-    "            \n",
-    "    def to_dsjson(self):             \n",
-    "        for e in self._examples:\n",
-    "            yield json.dumps(e, separators=(\",\", \":\"))\n",
-    "        \n",
-    "    def save(self):     \n",
-    "        with open(self._path, 'w') as f:\n",
-    "            for ex in self.to_dsjson():\n",
-    "                f.write(f'{ex}\\n')\n",
-    "    \n",
-    "    def load(self):\n",
-    "        self._examples = []\n",
-    "        with open(self._path) as f:\n",
-    "            for l in f:\n",
-    "                self._examples.append(json.loads(l))\n",
-    "                \n",
-    "    def cbdf(self):\n",
-    "        return pd.DataFrame([{\n",
-    "            'reward': -e['_label_cost'],\n",
-    "            'shared_good': e['c']['shared']['f'],\n",
-    "            'chosen': e['_labelIndex'],\n",
-    "            'prob': e['_label_probability']\n",
-    "        } for e in self._examples])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%matplotlib widget\n",
     "import random\n",
     "import pandas as pd\n",
@@ -79,105 +36,168 @@
     "import seaborn as sns\n",
     "sns.set_theme(style=\"darkgrid\")\n",
     "from vw_executor.vw import Vw\n",
-    "from vw_executor.loggers import ConsoleLogger\n",
-    "\n",
+    "from functools import reduce\n",
     "\n",
     "def new_ax():\n",
     "    _,ax = plt.subplots(dpi=100, figsize=[9,4])\n",
-    "    return ax        \n",
+    "    return ax    \n",
     "\n",
-    "class Simulation(SimulationBase):\n",
-    "    def __init__(self, folder, n=10000, swap_after=5000, variance=0, bad_log=0):\n",
-    "        super().__init__(folder, n=n, swap_after=swap_after, variance=variance, bad_log=bad_log)\n",
-    "        \n",
-    "    def generate(self):\n",
-    "        examples = []\n",
-    "        offset = 0\n",
-    "        for i in range(1, self.n):\n",
-    "            if i % self.swap_after == 0:\n",
-    "                offset = (offset + 1) % 2\n",
+    "def save_examples(examples, path):     \n",
+    "    with open(path, 'w') as f:\n",
+    "        for ex in examples:\n",
+    "            f.write(f'{json.dumps(ex, separators=(\",\", \":\"))}\\n')\n",
+    "            \n",
+    "def load_examples(path):\n",
+    "    with open(path) as f:\n",
+    "        for l in f:\n",
+    "            yield json.loads(l)\n",
     "\n",
-    "            person = i % 2 # random.randint(0, 1)\n",
-    "            chosen = i % 4  // 2 #random.randint(0, 1)\n",
-    "            if (chosen + person + offset) % 2 == 0:\n",
-    "                reward =  0.7 + ((chosen + offset) % 2) * 0.1#int(random.random() < 0.7 + ((chosen + offset) % 2) * 0.1)\n",
-    "            else:\n",
-    "                reward = 0.3 - ((chosen + offset + 1) % 2) * 0.1 #int(random.random() < 0.3 - ((chosen + offset + 1) % 2) * 0.1)\n",
-    "\n",
-    "            reward = reward + scipy.random.normal(0, self.variance)\n",
-    "\n",
-    "            examples.append({\n",
-    "                \"_label_cost\": -reward,\n",
-    "                \"_label_probability\": 0.5,\n",
-    "                \"_label_Action\": chosen + 1,\n",
-    "                \"_labelIndex\": chosen,\n",
-    "                \"a\": [chosen + 1, (chosen + 1) % 2 + 1],\n",
-    "                \"c\": {'shared': {'f': person,\n",
-    "                    '_multi': [\n",
-    "                        {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(2**self.bad_log)}},\n",
-    "                        {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(2**self.bad_log)}}]}},\n",
-    "                \"p\": [0.5, 0.5] \n",
-    "            })\n",
-    "        return examples\n",
+    "def get_simulation(folder, simulator, **kwargs):\n",
+    "    path = Path(folder).joinpath(f'sim-{VwOpts(kwargs)}'.replace(' ', '-'))\n",
+    "    if not path.exists():\n",
+    "        Path(folder).mkdir(parents=True, exist_ok=True)\n",
+    "        examples = list(simulator(**kwargs))\n",
+    "        save_examples(examples, path)\n",
+    "    else:\n",
+    "        examples = list(load_examples(path))\n",
+    "    return examples, path\n",
     "    \n",
-    "    def visualize(self, window=100, ax = None):\n",
-    "        colors = ['green', 'red']\n",
-    "        styles = ['-', '-.']\n",
-    "        if ax is None:\n",
-    "            ax = new_ax()\n",
-    "        df = self.cbdf()\n",
-    "        [df[(df['shared_good']==i) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
-    "            ax=ax, color = colors[j], style=styles[i], label=f'Person: {i}, chosen: {j}') for i in [0,1] for j in [0,1]]\n",
-    "        ax.legend()\n",
-    "        \n",
-    "def _predictions_parse(lines):\n",
-    "    for l in lines:\n",
-    "        if ':' in l:\n",
-    "            yield {int(kv.split(':')[0]): float(kv.split(':')[1]) for kv in l.split(',')}\n",
+    "def cb_df(examples):\n",
+    "    return pd.DataFrame([{\n",
+    "        'reward': -e['_label_cost'],\n",
+    "        'shared_good': e['c']['shared']['f'],\n",
+    "        'chosen': e['_labelIndex'],\n",
+    "        'prob': e['_label_probability']\n",
+    "    } for e in examples])    \n",
     "\n",
-    "def predictions_2_df(files):\n",
-    "    return pd.DataFrame(_predictions_parse(chain(*map(lambda f: open(f), files))))\n",
+    "def _collapse(*grids):\n",
+    "    from collections import OrderedDict\n",
+    "    result = reduce(lambda r, g: OrderedDict(r, **g), grids)\n",
+    "    separator = [len(g) for g in grids]\n",
+    "    return result, separator\n",
+    "\n",
+    "def _split(collapsed, separator):\n",
+    "    result = []\n",
+    "    last = 0\n",
+    "    items = list(collapsed.items())\n",
+    "    for c in separator:\n",
+    "        result.append(dict(items[last:last + c]))\n",
+    "        last = last + c\n",
+    "    return tuple(result)\n",
+    "\n",
     "    \n",
-    "def plot(sim, job, ax):\n",
+    "class Playground:\n",
+    "    def __init__(self, simulation, visualization, cache_path = '.cache'):\n",
+    "        self.data_folder = Path(cache_path).joinpath('datasets')\n",
+    "        self.simulation = simulation\n",
+    "        self.examples = None\n",
+    "        self.visualization = visualization\n",
+    "        self.last_job = None\n",
+    "        self.vw = Vw(cache_path, handlers=[])\n",
+    "        \n",
+    "    def run(self, simulator_grid, vw_grid):\n",
+    "        def _run_and_plot(separator, **options):\n",
+    "            sim_opts, train_opts = _split(options, separator)\n",
+    "            self.visualization.reset()\n",
+    "            examples, examples_path = get_simulation(self.data_folder, self.simulation, **sim_opts)\n",
+    "            self.visualization.after_simulation(examples)\n",
+    "            self.last_job = self.vw.train(\n",
+    "                [examples_path], train_opts, self.visualization.vw_outputs)\n",
+    "            self.visualization.after_train(examples, self.last_job)\n",
+    "        collapsed, separator = _collapse(simulator_grid, vw_grid)\n",
+    "        widget = interactive(_run_and_plot, separator=fixed(separator), **collapsed)\n",
+    "        print(len(widget.children))\n",
+    "        display(VBox(widget.children))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_simulation(n=10000, swap_after=5000, variance=0, bad_log=0):\n",
+    "    offset = 0\n",
+    "    for i in range(1, n):\n",
+    "        if i % swap_after == 0:\n",
+    "            offset = (offset + 1) % 2\n",
+    "\n",
+    "        person = i % 2 \n",
+    "        chosen = i % 4  // 2 \n",
+    "        if (chosen + person + offset) % 2 == 0:\n",
+    "            reward =  0.7 + ((chosen + offset) % 2) * 0.1\n",
+    "        else:\n",
+    "            reward = 0.3 - ((chosen + offset + 1) % 2) * 0.1\n",
+    "\n",
+    "        reward = reward + scipy.random.normal(0, variance)\n",
+    "\n",
+    "        yield {\n",
+    "            \"_label_cost\": -reward,\n",
+    "            \"_label_probability\": 0.5,\n",
+    "            \"_label_Action\": chosen + 1,\n",
+    "            \"_labelIndex\": chosen,\n",
+    "            \"a\": [chosen + 1, (chosen + 1) % 2 + 1],\n",
+    "            \"c\": {'shared': {'f': person,\n",
+    "                '_multi': [\n",
+    "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(2**bad_log)}},\n",
+    "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(2**bad_log)}}]}},\n",
+    "            \"p\": [0.5, 0.5] \n",
+    "        }\n",
+    "    \n",
+    "def visualize(examples, window=100, ax = None):\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
-    "    prediction_files = job.outputs['-p']\n",
-    "    df = pd.concat([sim.cbdf(), predictions_2_df(prediction_files)], axis=1)\n",
-    "    [(df[(df['shared_good']==i)][j].rolling(window=100).mean() + i * 0.05).plot(\n",
-    "        ax=ax, color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
-    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
-    "    \n",
-    "    \n",
-    "def vw_playground(n=10000, swap_after=5000, variance=0, bad_log=0, window=100, \n",
-    "                       learning_rate=-20, coin=False, l1=-20, cb_type='ips', \n",
-    "                       interactions='', ignore='', ignore_linear='', marginals='', \n",
-    "                       epsilon=None, squareCB=False, gamma_scale=None, \n",
-    "                       ax=None, fig=None):\n",
-    "    sim = Simulation('data', n=n, swap_after=swap_after, variance=variance, bad_log=bad_log)\n",
-    "    ax[0].clear()\n",
-    "    ax[0].set_title('Rewards')\n",
-    "    sim.visualize(window = window, ax=ax[0]) \n",
-    "    ax[1].clear()\n",
-    "    ax[1].set_title('P(action|person)')\n",
-    "\n",
-    "    opts = {'#base': '--cb_explore_adf --dsjson --epsilon 0.2',\n",
-    "            '#0': interactions,\n",
-    "            '#1': ignore,\n",
-    "            '#2': ignore_linear,\n",
-    "            '#3': marginals,\n",
-    "            '#lr': '--coin' if coin else f'--power_t 0 --learning_rate {2**learning_rate}',\n",
-    "            '--l1': 2**l1,\n",
-    "            '--cb_type': cb_type,\n",
-    "            '#square_cb': '--squarecb' if squareCB else '',\n",
-    "            '#epsilon': f'--epsilon {epsilon}',\n",
-    "            '#gammascale': f'--gamma_scale {gamma_scale}' if squareCB else ''\n",
-    "           }\n",
-    "\n",
-    "    result = Vw('.vw_cache', handlers=[]).train([sim._path], opts, ['-p'])\n",
-    "\n",
-    "\n",
-    "    plot(sim, result, ax[1])\n",
-    "    fig.canvas.draw_idle()"
+    "    ax = ax or new_ax()\n",
+    "    df = cb_df(examples)\n",
+    "    [df[(df['shared_good']==i) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
+    "        ax=ax, color = colors[j], style=styles[i], label=f'Person: {i}, chosen: {j}') for i in [0,1] for j in [0,1]]   \n",
+    "    ax.legend()      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visulization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyVisualization:\n",
+    "    def __init__(self):\n",
+    "        fig, ax = plt.subplots(1, 2, figsize=(12,4))\n",
+    "        self.fig = fig\n",
+    "        self.ax = ax\n",
+    "        self.vw_outputs = ['-p']\n",
+    "        \n",
+    "    def reset(self):\n",
+    "        self.ax[0].clear()\n",
+    "        self.ax[0].set_title('Rewards')\n",
+    "        self.ax[1].clear()\n",
+    "        self.ax[1].set_title('P(action|person)')\n",
+    "        \n",
+    "    def after_simulation(self, examples):\n",
+    "        visualize(examples, window = 100, ax=self.ax[0]) \n",
+    "        \n",
+    "    def after_train(self, examples, job):\n",
+    "        colors = ['green', 'red']\n",
+    "        styles = ['-', '-.']\n",
+    "        df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
+    "        [(df[(df['shared_good']==i)][str(j)].rolling(window=100).mean() + i * 0.05).plot(\n",
+    "            ax=self.ax[1], color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
+    "        self.ax[1].legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
+    "        self.fig.canvas.draw_idle()"
    ]
   },
   {
@@ -195,8 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = Simulation('data', n=100, swap_after=50, variance = 0.1, bad_log = 1)\n",
-    "sim.cbdf().head()"
+    "examples = my_simulation(n=100, swap_after=50, variance = 0.1, bad_log = 1)\n",
+    "cb_df(examples).head()"
    ]
   },
   {
@@ -205,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Simulation('data', n=10000, swap_after=5000, variance = 0, bad_log = 1).visualize(window=50)"
+    "visualize(my_simulation(n=10000, swap_after=5000, variance = 0, bad_log = 1), window=50)"
    ]
   },
   {
@@ -214,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Simulation('data', n=10000, swap_after=5000, variance = 0, bad_log = 1)._examples[0]"
+    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad_log = 1))"
    ]
   },
   {
@@ -264,6 +284,28 @@
     "exploration_controls = HBox((Label(\"Exploration\", layout=Layout(display=\"flex\", justify_content=\"flex-start\", width=\"4%\")),) + widget.children[13:-1])\n",
     "output = widget.children[-1]\n",
     "display(VBox([data_controls, visualization_controls, learning_controls, namespaces_controls, exploration_controls, output]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import *\n",
+    "\n",
+    "playground = Playground(my_simulation, MyVisualization())\n",
+    "playground.run(\n",
+    "    InteractiveGrid({\n",
+    "        'n': [10000, 20000],\n",
+    "        'swap_after': [5000],\n",
+    "        'variance': [0],\n",
+    "        'bad_log': [0]\n",
+    "    }),\n",
+    "    InteractiveGrid({\n",
+    "        '#base': '--cb_explore_adf --dsjson'\n",
+    "    })\n",
+    ")"
    ]
   },
   {
