cleaner demo version

--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -85,6 +85,10 @@
     "        last = last + c\n",
     "    return tuple(result)\n",
     "\n",
+    "def grid_layout(elements, columns=4):\n",
+    "    rows = (len(elements) - 1) // columns + 1\n",
+    "    layout = Layout(grid_template_rows=' '.join(['auto'] * rows), grid_template_columns=' '.join(['auto'] * columns))\n",
+    "    return GridBox(children=elements, layout=layout)   \n",
     "    \n",
     "class Playground:\n",
     "    def __init__(self, simulation, visualization, cache_path = '.cache'):\n",
@@ -95,7 +99,7 @@
     "        self.last_job = None\n",
     "        self.vw = Vw(cache_path, handlers=[])\n",
     "        \n",
-    "    def run(self, simulator_grid, vw_grid):\n",
+    "    def run(self, simulator_grid, vw_grid, columns=4):\n",
     "        def _run_and_plot(separator, **options):\n",
     "            sim_opts, train_opts = _split(options, separator)\n",
     "            self.visualization.reset()\n",
@@ -106,8 +110,13 @@
     "            self.visualization.after_train(examples, self.last_job)\n",
     "        collapsed, separator = _collapse(simulator_grid, vw_grid)\n",
     "        widget = interactive(_run_and_plot, separator=fixed(separator), **collapsed)\n",
-    "        print(len(widget.children))\n",
-    "        display(VBox(widget.children))"
+    "        simulator_controls = grid_layout(widget.children[:len(simulator_grid)], columns)\n",
+    "        vw_controls = grid_layout(widget.children[len(simulator_grid):len(simulator_grid)+len(vw_grid)], columns)\n",
+    "        controls = Accordion(children=[simulator_controls, vw_controls])\n",
+    "        controls.set_title(0, 'Simulator')\n",
+    "        controls.set_title(1, 'Trainer')\n",
+    "        output = widget.children[-1]\n",
+    "        display(VBox([controls, output]))"
    ]
   },
   {
@@ -123,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_simulation(n=10000, swap_after=5000, variance=0, bad_log=0):\n",
+    "def my_simulation(n=10000, swap_after=5000, variance=0, bad=0):\n",
     "    offset = 0\n",
     "    for i in range(1, n):\n",
     "        if i % swap_after == 0:\n",
@@ -146,12 +155,12 @@
     "            \"a\": [chosen + 1, (chosen + 1) % 2 + 1],\n",
     "            \"c\": {'shared': {'f': person,\n",
     "                '_multi': [\n",
-    "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(2**bad_log)}},\n",
-    "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(2**bad_log)}}]}},\n",
+    "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}},\n",
+    "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}}]}},\n",
     "            \"p\": [0.5, 0.5] \n",
     "        }\n",
     "    \n",
-    "def visualize(examples, window=100, ax = None):\n",
+    "def visualize(examples, window=100, ax=None):\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
     "    ax = ax or new_ax()\n",
@@ -175,11 +184,12 @@
    "outputs": [],
    "source": [
     "class MyVisualization:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, window=100):\n",
     "        fig, ax = plt.subplots(1, 2, figsize=(12,4))\n",
     "        self.fig = fig\n",
     "        self.ax = ax\n",
     "        self.vw_outputs = ['-p']\n",
+    "        self.window=100\n",
     "        \n",
     "    def reset(self):\n",
     "        self.ax[0].clear()\n",
@@ -188,13 +198,13 @@
     "        self.ax[1].set_title('P(action|person)')\n",
     "        \n",
     "    def after_simulation(self, examples):\n",
-    "        visualize(examples, window = 100, ax=self.ax[0]) \n",
+    "        visualize(examples, window=self.window, ax=self.ax[0]) \n",
     "        \n",
     "    def after_train(self, examples, job):\n",
     "        colors = ['green', 'red']\n",
     "        styles = ['-', '-.']\n",
     "        df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
-    "        [(df[(df['shared_good']==i)][str(j)].rolling(window=100).mean() + i * 0.05).plot(\n",
+    "        [(df[(df['shared_good']==i)][str(j)].rolling(window=self.window).mean() + i * 0.02).plot(\n",
     "            ax=self.ax[1], color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
     "        self.ax[1].legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
     "        self.fig.canvas.draw_idle()"
@@ -254,36 +264,22 @@
    "source": [
     "from ipywidgets import *\n",
     "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(12,4))\n",
-    "\n",
-    "widget = interactive(\n",
-    "    vw_playground,\n",
-    "    n=IntSlider(min=1000, max=20000, step=1000, value=10000),\n",
-    "    swap_after=IntSlider(min=1000, max=20000, step=1000, value=5000),\n",
-    "    variance=FloatSlider(min=0, max=2, step=0.1, value=0),\n",
-    "    bad_log=IntSlider(min=0, max=10, step=1, value=0),\n",
-    "    window=IntSlider(min=1, max=1000, step=10, value=1),\n",
-    "    learning_rate=IntSlider(min=-20,max=10, step=1, value=-20),\n",
-    "    coin=Checkbox(),\n",
-    "    l1=IntSlider(min=-20,max=10, step=1, value=-20),\n",
-    "    cb_type=['ips', 'mtr'],\n",
-    "    interactions=['', '-q sa', '-q ab', '-q sb', '-q ::'],\n",
-    "    ignore=['', '--ignore b'],\n",
-    "    ignore_linear=['', '--ignore_linear sab'],\n",
-    "    marginals=['', '--marginal a'],\n",
-    "    epsilon = FloatSlider(min=0, max=1, step=0.01),\n",
-    "    squareCB=Checkbox(),\n",
-    "    gamma_scale=FloatLogSlider(value=1, min=0, max=20, base=2, step=1),\n",
-    "    ax=fixed(ax),\n",
-    "    fig=fixed(fig))\n",
-    "\n",
-    "data_controls = HBox(widget.children[:4])\n",
-    "visualization_controls = HBox(widget.children[4:5])\n",
-    "learning_controls = HBox((Label(\"Learning\", layout=Layout(display=\"flex\", justify_content=\"flex-start\", width=\"4%\")),) + widget.children[5:8])\n",
-    "namespaces_controls = HBox((Label(\"Namespaces\", layout=Layout(display=\"flex\", justify_content=\"flex-start\", width=\"4%\")),) + widget.children[9:12])\n",
-    "exploration_controls = HBox((Label(\"Exploration\", layout=Layout(display=\"flex\", justify_content=\"flex-start\", width=\"4%\")),) + widget.children[13:-1])\n",
-    "output = widget.children[-1]\n",
-    "display(VBox([data_controls, visualization_controls, learning_controls, namespaces_controls, exploration_controls, output]))"
+    "playground = Playground(my_simulation, MyVisualization())\n",
+    "playground.run(\n",
+    "    InteractiveGrid({\n",
+    "        'n': IntSlider(value=10000, min=100, max=50000),\n",
+    "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
+    "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
+    "        'bad': FloatLogSlider(value=1, min=0, max=10, base=2, step=1)\n",
+    "    }),\n",
+    "    InteractiveGrid({\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0'),\n",
+    "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
+    "        '--cb_type': ['ips', 'mtr'],\n",
+    "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
+    "    }),\n",
+    "    columns=3\n",
+    ")"
    ]
   },
   {
@@ -292,20 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import *\n",
-    "\n",
-    "playground = Playground(my_simulation, MyVisualization())\n",
-    "playground.run(\n",
-    "    InteractiveGrid({\n",
-    "        'n': [10000, 20000],\n",
-    "        'swap_after': [5000],\n",
-    "        'variance': [0],\n",
-    "        'bad_log': [0]\n",
-    "    }),\n",
-    "    InteractiveGrid({\n",
-    "        '#base': '--cb_explore_adf --dsjson'\n",
-    "    })\n",
-    ")"
+    "playground.last_job"
    ]
   },
   {
