--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -91,13 +91,13 @@
     "    return GridBox(children=elements, layout=layout)   \n",
     "    \n",
     "class Playground:\n",
-    "    def __init__(self, simulation, visualization, cache_path = '.cache'):\n",
+    "    def __init__(self, simulation, visualization, vw_binary=None, cache_path = '.cache'):\n",
     "        self.data_folder = Path(cache_path).joinpath('datasets')\n",
     "        self.simulation = simulation\n",
     "        self.examples = None\n",
     "        self.visualization = visualization\n",
     "        self.last_job = None\n",
-    "        self.vw = Vw(cache_path, handlers=[])\n",
+    "        self.vw = Vw(cache_path, vw_binary, handlers=[])\n",
     "        \n",
     "    def run(self, simulator_grid, vw_grid, columns=4):\n",
     "        def _run_and_plot(separator, **options):\n",
@@ -113,8 +113,8 @@
     "        simulator_controls = grid_layout(widget.children[:len(simulator_grid)], columns)\n",
     "        vw_controls = grid_layout(widget.children[len(simulator_grid):len(simulator_grid)+len(vw_grid)], columns)\n",
     "        controls = Accordion(children=[simulator_controls, vw_controls])\n",
-    "        controls.set_title(0, 'Simulator')\n",
-    "        controls.set_title(1, 'Trainer')\n",
+    "        controls.set_title(0, 'Simulator args')\n",
+    "        controls.set_title(1, 'Vw args')\n",
     "        output = widget.children[-1]\n",
     "        display(VBox([controls, output]))"
    ]
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples = my_simulation(n=100, swap_after=50, variance = 0.1, bad_log = 1)\n",
+    "examples = my_simulation(n=100, swap_after=50, variance = 0.1, bad = 1)\n",
     "cb_df(examples).head()"
    ]
   },
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize(my_simulation(n=10000, swap_after=5000, variance = 0, bad_log = 1), window=50)"
+    "visualize(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1), window=50)"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad_log = 1))"
+    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1))"
    ]
   },
   {
